Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35486

MDEV-33997 test failed

    XMLWordPrintable

Details

    Description

      MDEV-33997 test failed:

      wsrep.MDEV-33997 'binlogoff'             w4 [ pass ]     41
      worker[04] > Restart [mysqld.1 - pid: 131425, winpid: 131425] - using different config file
      wsrep.MDEV-33997 'binlogon'              w5 [ fail ]
              Test ended at 2024-11-13 04:22:16
       
      CURRENT_TEST: wsrep.MDEV-33997
      mysqltest: At line 16: query 'DROP TABLE t' failed: ER_LOCK_WAIT_TIMEOUT (1205): Lock wait timeout exceeded; try restarting transaction
       
      The result from queries just before the failure was:
      SET SESSION wsrep_osu_method=RSU;
      SET autocommit=0;
      CREATE TABLE t (c INT) ENGINE=INNODB PARTITION BY KEY(c) PARTITIONS 2;
      INSERT INTO t VALUES (1);
      INSERT INTO t SELECT 1 ;
      COMMIT;
      SELECT * FROM t;
      c
      1
      1
      DROP TABLE t;
       
       - saving '/dev/shm/var/5/log/wsrep.MDEV-33997-binlogon/' to '/dev/shm/var/log/wsrep.MDEV-33997-binlogon/'

      Attachments

        Activity

          People

            sysprg Julius Goryavsky (Inactive)
            sysprg Julius Goryavsky (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.